# job-posting-salary-estimator

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  app.py  docker_startup.sh  dvc.yaml  params.yaml  pyproject.toml  requirements.txt  run.sh
.dvc/: config
data/: .gitignore  datasets.dvc  embedding_cache.dvc  models.dvc
data/embedding_cache/: .gitignore  job_function_embedding_cache.pkl  skill_embedding_cache.pkl
data/models/: catboost_2025-10-31_18:03.cbm  lower_catboost_2025-11-03_19:50.cbm  lower_catboost_2025-11-03_21:04.cbm  upper_catboost_2025-11-03_19:51.cbm  upper_catboost_2025-11-03_21:36.cbm
scripts/: clean_initial_data.py
src/dataset/: process_data.py
src/embeddings/: build_job_function.py  build_job_function_cache.py  build_skill.py  build_skill_cache.py  job_function.py  skills.py  utils.py
src/feature_cleaning/: education_level.py  location.py  skills.py  utils.py
src/feature_extraction/: build_features.py  job_function.py  location_refining.py  seniority.py
src/llm/: batch_processor.py  job_details.py  model.py  ollama_setup.py
src/model/: eval.py  hyperparameter_optimization.py  save.py  train.py
src/predictions/: features.py  inference.py  inference_test.py
